--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi==0.116.*
 hypercorn==0.17.*
 python-multipart==0.0.9
-pymupdf==1.24.*          # ← revert to the real package
+pymupdf==1.24.*
+python-docx==1.0.*
